тестовое представление слайдера с ruler

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -16,7 +16,9 @@
         <input type="text" class="toggle__handle">
         <div class="thumb">0</div>
       </div>
-      <ul class="ruler"></ul>
+      <ul class="ruler">
+        <li class="ruler__item"></li>
+      </ul>
     </div>
   </div>
 </body>
