Добавление верстки демо-страницы

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -7,18 +7,21 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="some-block">
-    <div class="simpleSlider">
-      <div class="bar">
-        <div class="bar__scale"></div>
-      </div>
-      <div class="toggle">
-        <input type="text" class="toggle__handle">
-        <div class="thumb">0</div>
-      </div>
-      <ul class="ruler">
-        <li class="ruler__item"></li>
-      </ul>
+  <div class="wrapper">
+    <div class="preview slider-1 js-slider-1">
+      <span class="preview__title">Default slider:</span>
+      <div class="preview__slider-box js-slider__slider-box-1"></div>
+      <div class="preview__panel-box js-slider__panel-box-1"></div>
+    </div>
+    <div class="preview slider-2 js-slider-2">
+      <span class="preview__title">Vertical slider:</span>
+      <div class="preview__slider-box js-slider__slider-box-2"></div>
+      <div class="preview__panel-box js-slider__panel-box-2"></div>
+    </div>
+    <div class="preview slider-3 js-slider-3">
+      <span class="preview__title">Range slider:</span>
+      <div class="preview__slider-box js-slider__slider-box-3"></div>
+      <div class="preview__panel-box js-slider__panel-box-3"></div>
     </div>
   </div>
 </body>
